<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">


    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <!-- Titre sous le logo -->
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Title"
        android:textColor="@color/color11"
        android:textSize="60sp"
        android:textStyle="bold"
        android:fontFamily="casual" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/Title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/play"
        android:textColor="@color/color1"
        android:textSize="20dp"
        android:backgroundTint="@color/color11"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/trainingMode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/playButton"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/trainMode"
        android:textColor="@color/color1"
        android:textSize="20dp"
        android:backgroundTint="@color/color11"
        android:elevation="4dp"/>


    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textSize="12sp"
        android:textColor="@color/creditColor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <ImageButton
        android:id="@+id/soundToggleButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_sound_on"
        android:contentDescription="Toggle Sound" />

</RelativeLayout>
